--- a/mysql.yaml
+++ b/mysql.yaml
@@ -1,32 +1,32 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: mongodb-deployment
+  name: mysql-deployment
   labels:
-    app: mongodb
+    app: mysql
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: mongodb
+      app: mysql
   template:
     metadata:
       labels:
-        app: mongodb
+        app: mysql
     spec:
       containers:
-      - name: mongodb
-        image: mongo
+      - name: mysql
+        image: mysql
         ports:
         - containerPort: 27017
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: mongodb-service
+  name: mysql-service
 spec:
   selector:
-    app: mongodb
+    app: mysql
   ports:
     - protocol: TCP
       port: 27017
